# fireflow

./: .gitignore  CMakeLists.txt  Makefile  README.md
configs/: config.json  config_guide.md
docs/: compile-guide.md  projectproposal.md
include/: capture.h  cusum.h  detector.h  entropy.h  mapper.h  mapping.h  packet.h  parser.h
lib/log4cpp/: config.status  libtool
lib/log4cpp/src/.deps/: AbortAppender.Plo  Appender.Plo  AppenderSkeleton.Plo  AppendersFactory.Plo  BasicConfigurator.Plo  BasicLayout.Plo  BufferingAppender.Plo  Category.Plo  CategoryStream.Plo  Configurator.Plo  DailyRollingFileAppender.Plo  DllMain.Plo  DummyThreads.Plo  FactoryParams.Plo  FileAppender.Plo  Filter.Plo  FixedContextCategory.Plo  HierarchyMaintainer.Plo  IdsaAppender.Plo  LayoutAppender.Plo  LayoutsFactory.Plo  LevelEvaluator.Plo  Localtime.Plo  LoggingEvent.Plo  MSThreads.Plo  NDC.Plo  NTEventLogAppender.Plo  OmniThreads.Plo  OstreamAppender.Plo  PThreads.Plo  PassThroughLayout.Plo  PatternLayout.Plo  PortabilityImpl.Plo  Priority.Plo  Properties.Plo  PropertyConfigurator.Plo  PropertyConfiguratorImpl.Plo  RemoteSyslogAppender.Plo  RollingFileAppender.Plo  SimpleConfigurator.Plo  (+8 more)
lib/log4cpp/src/.libs/: liblog4cpp.so.5.0.6
lib/log4cpp/tests/: testbench  testmain
lib/log4cpp/tests/.deps/: Clock.Po  (+2 more)
logs/: fireflow-log.txt  packet-log.txt
src/: capture.cpp  capture.h  cusum.cpp  cusum.h  detection.cpp  detection.h  detector.cpp  detector.h  entropy.cpp  entropy.h  fireflow.cpp  loggerparser.cpp  mapper.cpp  mapping.cpp  packet.h  packet_t.h  parser.cpp  process_packet.cpp  process_packet.h  statistic.cpp  statistic.h  test.cpp
test/: basiclib.cpp  entropy.cpp  ipconvert.cpp  listallheaders.txt  logtest.cpp  mean.cpp  queuelogic.cpp  test.cpp  test_fireflow.cpp  test_mapping.cpp  test_spdlog.cpp  unittest_cusum.cpp  unittest_entropy.cpp
(+2 files in other folders)
